# ChucK-ME

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp
Source/WeldChucK/: EmbeddedChucKEngine.cpp  EmbeddedChucKEngine.h  WeldChucKEngine.h
Source/WfApp/: Main.cpp  WfChucKPrograms.h
Tests/: EngineBoundaryTest.cpp  WfProgramTest.cpp
demos/: ChucK-ME demo1.chuckme  ChucK-ME demo2.chuckme  ChucK-ME demo3.chuckme
docs/: CHUCK_LANE_SCRIPT_CATALOGUE.md  PROJECT_DESIGN_NOTES.txt  wf-staged-development.md
